pgAdmin/route.yml
apiVersion: route.openshift.io/v1
kind: Route 
metadata:
  labels:
    app: counter-postgresadmin
  name: counter-postgresadmin
spec:
  port: 
    targetPort: 5050
  to: 
    kind: Service
    name: counter-postgresadmin
  tls: 
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
